k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: myapp
spec:
  selector:
    app: myapp
  ports:
  - protocol: TCP
    port: 80 #The port that the service exposes inside the cluster.
    targetPort: 80 #The port inside the Pods where traffic should be directed.
