k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: myapp-ns
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - myapp.test.com
    secretName: myapp-tls   #Stores the SSL certificate in a Kubernetes Secret named myapp-tls
  rules:
  - host: myapp.test.com       #Routes requests from myapp.test.com to the internal Kubernetes service myapp-servic
    http:
      paths:
      - path: /   #Routes all traffic (/) to myapp-service
        pathType: Prefix
        backend:
          service:
            name: myapp-service   #Forwards traffic to the internal Kubernetes Service myapp-service
            port:
              number: 80

#A user accesses https://myapp.test.com/ in a browser.The Ingress Controller receives the request.
#It checks the rules in the Ingress configuration.
#Since the host matches (myapp.test.com), it forwards the request to the internal service (myapp-service).
#The service sends the request to the correct Pod running the application.
